refactor: use DynamodbStreamRecord aws sdk instead of JsonNode